Siam Army Path finished

--- a/localisation/KR_Siam_l_english.yml
+++ b/localisation/KR_Siam_l_english.yml
@@ -3,18 +3,52 @@
 ### Ideas ###
 SIA_black_monday:0 "Black Monday"
 SIA_black_monday_desc:0 "Also known as the 1936 Berlin Stock Market Crash. As we have Germany as one of the top trading partners - our export industry do suffered a lot."
-SIA_conscription_bonus:0 "Army Reserves Act"
+
+SIA_conscription_bonus:0 "National Reserves Act"
 SIA_conscription_bonus_desc:0 "All healthy Siamese men must complete the two years of national service and remain subject to recall until aged 55."
 SIA_RPC_good:0 "Bountiful Harvest Year"
 SIA_RPC_neutral:0 "Normal Harvest Year"
 SIA_RPC_bad:0 "Abysmal Harvest Year"
-
 SIA_airport_authority_idea:0 "Airport Authority of Siam"
 SIA_airport_authority_idea_desc:0 "The AAS is responsible for co-ordinating international and domestic flights within the [SIA.GetNameDef] airspace, as well as maintaining civilian airports"
 SIA_air_production:0 "Expanded TAI Factories"
-SIA_air_production_desc:0 "Founded as an seperate entity from the RSAFW by the Royal Siamese Air Corps - they're in charge of developing authentic Siamese aircraft"
+SIA_air_production_desc:0 "Founded as an seperate entity from the RSAFW by the Royal Siamese Air Corps - they're in charge of developing authentic Siamese aircraft."
 SIA_air_focus: "Protector of the Skies"
 SIA_navy_focus:0 "Two-Ocean Navy"
+SIA_salacheepphurchard_idea:0 "For the Motherland!"
+SIA_salacheepphurchard_idea_desc:0 "As we born on this land - we shall protect it at all cost for our family and future generations."
+SIA_suranaree_corps_idea:0 "Suranaree Corps"
+SIA_suranaree_corps_idea_desc:0 "Suranaree Corps is an all-women corps formed by the RSA in an attempt to replace the manpower lost from the recent heavy fighting."
+SIA_yuwachon_taharn_idea:0 "Yuwachon Taharn"
+SIA_yuwachon_taharn_idea_desc:0 "Yuwachon Taharn is a reserve officer cadet training programme aiming to increase combat performance for new recruits."
+SIA_education_reform_idea:0 "National Curriculum Act"
+SIA_education_reform_idea_desc:0 "By making sure that our education is standardized - the literacy rate will surely improves."
+SIA_chulachomklao_academy:0 "Chulachomklao Royal Military Academy"
+SIA_chulachomklao_academy_desc:0 "Originally founded in 1887 as the Royal Military Academy. It was recently merged with the Royal Thai Army Polytechniques Institute, under the new name Chulachomklao Royal Military Academy in the honor of King Chulachomklao (Rama V)
+SIA_industrialmobilizationplan:0 "Industrial Mobilization Plan"
+SIA_industrialmobilizationplan_desc:0 "Created as an emergency plan in the case of war - our industry can increase the output up to 10% for tthe war effort"
+SIA_taharn_pran_idea:0 "Taharn Pran"
+SIA_taharn_pran_idea_desc:0 "A unit specialized in info-gathering - this can surely helps our war effort"
+SIA_counterinsurgency_idea:0 "Counter-insurgency Tactics"
+SIA_counterinsurgency_idea_desc:0 "Developed further from the Taharn Pran concept - of course those gathered info can be use to hunt down domestic enemies too."
+
+### Custom Tech ###
+asymmetrical_warfare:0 "Asymmetrical Warfare Trainng"
+SIA_asymmetrical_warfare_effect:0 "Enables §HAsymmetrical Warfare Trainng§!\n§HAll legged units\n    Urban§!\n      Attack: §G+10%§!\n      Defense: §G+5%§!\n      Movement: §G+5%§!\n\n"
+jungle_warfare:0 "Jungle Combat Training"
+SIA_jungle_warfare_effect:0 "Enables §HJungle Combat Training§!\n§HAll legged units\n    Jungle§!\n      Attack: §G+10%§!\n      Defense: §G+5%§!\n      Movement: §G+5%§!\n\n"
+
+### Custom Tooltip ###
+SIA_jungle_tt:0 "§GJungle Combat Training§! will help us fight in the jungle areas better.\n"
+SIA_urban_tt:0 "§GAsymmetrical Warfare Trainng§! will help us fight in the urban areas better.\n"
+SIA_PHRAYA_PHAHON_ELECTED:0 "Phraya Phahon of the Kijsangkhom Party is elected."
+SIA_PRIDI_PANOMYONG_ELECTED_ELECTED:0 "Pridi Panomyong of the Sahachip Party is elected."
+SIA_SENI_PRAMOJ_ELECTED:0 "Seni Pramoj of the Prachatipat Party is elected."
+SIA_CONSTITUTION_GIVEN:0 "The constitution draft made by King Prajadhipok is passed by the Apiratthamontri Sapha."
+SIA_KHANA_RATSADON_COUP:0 "Khana Ratsadon's Coup d'etat happens."
+SIA_maritimesilkroad_proposed:0 "The Maritime Silkroad Intiative is approved by the parliament."
+SIA_hapagproposal:0 "HAPAG/Shipping Line propose us a lucrative trade deal."
+SIA_police_integration_tt:0 "With the Royal Siamese Police Command now being under the Royal Siamese Army control - they can now be use as the last defense against foreign invaders.\n\n"
 
 ### Parties Siam/Thailand ###
 SIA_totalist_party:0 "Pak Kommunist Siam"
@@ -53,7 +87,7 @@ SIA_national_populist_party_long:0 "Khana Ratsadon(People's Party)"
 #siam_cement:0 "Siam Cement"
 #siam_aeronautics:0 "Siam Aeronautics"
 #SIA_TAI:0 "Thai Aviation Industries"
-#tanin:0 "Tanin Industrial Company"
+#tanin:0 "Tanin Industrial Company" 
 #SIA_MEF:0 "Military Explosives Factory"
 #chulalongkorn:0 "Chulalongkorn University"
 #SIA_ford:0 "Ford Siam"
