--- a/localisation/KR_USA_l_english.yml
+++ b/localisation/KR_USA_l_english.yml
@@ -738,7 +738,7 @@ ustates.500.d:0 "MacArthur and Reed have long been at loggerheads for some time.
 ustates.500.a:0 "Damn you MacArthur!"
 
 ustates.60.t:0 "Inauguration of President Reed"
-ustates.60.d:0 "The country's social problems have forced the American people to turn to radical solutions; the two-party system has broken down, and Jack Reed is to be sworn in as the 31st president of the United States with Norman Thomas being sworn in as the Vice President. In a stirring speech in Washington DC, Reed has pledged to defend the interests of the workers and work to help revolutionize society for the good of all Americans.  "
+ustates.60.d:0 "The country's social problems have forced the American people to turn to radical solutions; the two-party system has broken down, and Jack Reed is to be sworn in as the 31st president of the United States with Norman Thomas being sworn in as the Vice President. In a stirring speech in Washington DC, Reed has pledged to defend the interests of the workers and work to help revolutionise society for the good of all Americans.  "
 ustates.60.a:0 "Let the People rejoice!"
 
 ustates.61.t:0 "Nationalise the Resource Industries"
@@ -1425,7 +1425,7 @@ ustates.216.a:0 "Accept their offer!"
 ustates.216.b:0 "Refuse their alliance, we don't need anyone!"
 
 ustates.217.t:0 "[GetYear] Presidential Election"
-ustates.217.d.dead_curtis:0 "With the civil war at an end it is time for the Presidential Elections of [GetYear] to begin. Quentin Roosevelt has been the president of the United States since President Charles Curtis died during the civil war. Quentin Roosevelt has steered the country to victory in the Civil War. John Nancer Garner has come out of the shadows to try and win the elections for the Democrats. However he is clearly the underdog in this race as Quentin Roosevelt is the clear favorite. "
+ustates.217.d.dead_curtis:0 "With the civil war at an end it is time for the Presidential Elections of [GetYear] to begin. Quentin Roosevelt has been the president of the United States since President Charles Curtis died during the civil war. Quentin Roosevelt has steered the country to victory in the Civil War. John Nancer Garner has come out of the shadows to try and win the elections for the Democrats. However he is clearly the underdog in this race as Quentin Roosevelt is the clear favourite. "
 ustates.217.d.civil_war:0 "The civil war is now at an End and the Presidential election of [GetYear] is beginning. Charles Curtis has decided to not run for the Presidency. Having steered America through the hellish chaos that was the civil war he plans to let his young VP Quentin Roosevelt run instead. Meanwhile John Nance Garner has returned in order to have an alternative path now that peace has returned to America. "
 ustates.217.d.no_war:0 "The elections of [GetYear] are about to begin. Since the start of the Fair deal the republicans have been enjoying immense support throughout the country. Especially since the political crisis of 1936 is over. President Charles Curtis is not seeking re-election instead Vice-President Quentin Roosevelt shall be running while John Nance Garner has decided to give it another shot at running for running for president. Whom shall the people choose. "
 ustates.217.a:0 "Quentin Roosevelt"
@@ -1438,7 +1438,7 @@ ustates.218.b:0 "Reelect John Nance Garner"
 ustates.218.c:0 "Go with Robert Taft"
 ustates.218.e:0 "Go with Cordell Hull"
 ustates.219.t:0 "[GetYear] Presidential Election"
-ustates.219.d.roosevelt_reelected:0 "Quentin Roosevelt unsuprisingly won reelection in the last election. While some were advoctating for him to take the unprecedent move of a third term, he has decided to step aside and allow Thomas Dewey to take the reins of the Republican Party and run for President in [GetYear]. The Democrats meanwhile have nominated Alben W. Barkley as their choice for president this year."
+ustates.219.d.roosevelt_reelected:0 "Quentin Roosevelt unsurprisingly won reelection in the last election. While some were advocating for him to take the unprecedented move of a third term, he has decided to step aside and allow Thomas Dewey to take the reins of the Republican Party and run for President in [GetYear]. The Democrats meanwhile have nominated Alben W. Barkley as their choice for president this year."
 ustates.219.d.taft_elected:0 "Robert Taft in the last election allowed the Republican party to win re-election. He is on track to win the election of [GetYear] with most support behind him. To oppose him Cordell Hull has been nominated by the Democratic Party to counter him. "
 ustates.219.d.garner_reelected:0 "With the election of [GetYear] coming up Garner has decided not to stand for re-election but instead will be supporting the democratic nominee of Alben W. Barkley. The Republicans have decided to nominate Thomas Dewey as their candidate of choice for the election of [GetYear]. Whom shall the voters choose? "
 ustates.219.d.hull_elected:0 "With Cordell Hull winning the election he has decided to seek re-election in the Presidential election of [GetYear]. The Republicans meanwhile have decided to nominate Thomas Dewey as their candidate for the presidential election. "
