Missing fire_only_once = yes and missing loc string

--- a/localisation/KR_USA_l_english.yml
+++ b/localisation/KR_USA_l_english.yml
@@ -458,6 +458,8 @@ USA_national_populist_party_long:0 "America First Party"
 ### Opinion Modifiers ###
 USA_embargo_syndicalism:0 "American Embargo on the International"
 USA_american_trade:0 "American Trade Relations"
+COUGHLIN_RADIO_STOP:0 "Coughlin's Broadcasts Stopped"
+COUGHLIN_RADIO_CONTINUES:0 "Coughlin's Broadcasts Continue"
 
 ### Events ###
 ustates.501.t:0 "America in 1936"
