This should let the player um.... go wild?

--- a/localisation/KR_Political_l_english.yml
+++ b/localisation/KR_Political_l_english.yml
@@ -143,6 +143,7 @@ kr.political.24.d:0 "The Kaiserreich Team proudly present Kaiserreich Alpha vers
 kr.political.24.a:0 "Thank you Kaiserreich team!"
 kr.political.24.b:0 "Tell me more about this exciting new stability system..."
 kr.political.24.c:0 "But wait I have more questions... (Go to FAQ)"
+kr.political.24.e:0 "I want to go wild!"
 
 kr.political.25.t:0 "Meet the Team"
 kr.political.25.d:0 "Many thanks to the Kaiserreich HOI4 team:\n\n~mw~, Ace of Aces, Ahearne, AllyJammy, Anbory, Arda, Augenis, Axelius, BattleSarge, Chapien, Chef Exellence, CrazyZombie, CulturalMarxist, DDago, Dedlift, Delincious, Denizz, Dick Bong, DoctorPainkiller, Dskod1, Dylanstrategie, Esmaerla, Fatherlorris, Firefly, Flamefang, Gibzit, HappyNTH, Hayro, Herkles, Hyvinvointinionvaakalaudalla, Jak, Kakletron, Kallar, Kornilov, Mark, MattTheCzar, Miinda, Mikus, MonarchistKaiser, Musteline, Nijato, PPsyrius, Packard, Phil, Pinback, Rebi-chan, Rylock, Selim, Skullcrusher, Strategia, Tatiana, TheBlackWinds, VincentDN, Wyandotte, Zankoas, Zarasophos and our beloved Kaiserbots!\n\nSpecial thanks go to our past developers in the HOI2 and DH versions, to Sarmatia1871 who created this marvellous universe, and of course to the fans, who have stuck with us for over 10 years. We could not have got here without you guys. Thank you for playing Kaiserreich!\n\nP.S. For full credits and a list of the mods incorporated into Kaiserreich, check out the new credits file in the mod!"
@@ -169,12 +170,20 @@ kr.political.35.a:0 "Do you have to take that PP away?"
 kr.political.28.t:0 "News Events"
 kr.political.28.d:0 "This is the president of the International News Tribune speaking. Kaiserreich is a mod deeply entrenched in lore and storytelling, conveyed through events, national focuses and other means. However, as the player, you might not even realise this, because most of the happenings in foreign countries are unknown to your eyes. Therefore we have created a system of news events that tell you about the major events that happened recently in other countries. They contain titbits of lore to help you understand the meaning and reasons for the events of the world, and they are also pretty and stuff. \n\nHowever, you may be a game tester or have a serious addiction with this being your 1000th game this week, or just a player who doesn't want popups in your face all the time, so you also have the option to turn this feature off entirely or allow only the important news events to fire. It's your choice..."
 kr.political.28.a:0 "I want to know everything, EVERYTHING!"
-kr.political.28.b:0 "Only inform me about major events."
+kr.political.28.b:0 "Only inform me about major events." 
 kr.political.28.c:0 "I want none of this nonsense."
 
 kr.political.36.t:0 "Where is the April Fools Joke?"
 kr.political.36.d:0 "In order to prevent multiplayer ruining, this event now longer automatically activates the April fools joke. Instead, all you have to do is open the in game console and type: "event april.1", simple!"
 kr.political.36.a:0 "Got it!"
+
+kr.political.37.t:0 "Want to remove faction joining limits?"
+kr.political.37.d:0 "You want to ignore the lore of KR? You want to deify hundreds of years of history? You want to break the cosmos? Well we want stop you...open the in game console and type: "event kr.political.38" and you can join factions to your hearts content. IF YOU USE THIS THERE WILL BE BUGS AND CRAZY AI BEHAVIOUR! Please don't report bugs you find in this mode."
+kr.political.37.a:0 "I am a bad person and should feel bad."
+
+kr.political.38.t:0 "Remove Faction Joining Limits"
+kr.political.38.d:0 "This event will remove faction joining limits for all players, if you didn't activate this event on purpose please submit a bug report. Note it may take a few days to apply."
+kr.political.38.a:0 "I CAN GO WILD!"
 
 ### Remove Independent War Event ###
 kr.political.30.t:0 "End of Our Independent War"
