--- a/localisation/KR_Turkey_l_english.yml
+++ b/localisation/KR_Turkey_l_english.yml
@@ -30,7 +30,7 @@ TUR_national_populist_party_long:0 "Bozkurtlar Grubu"
 ### Events ###
 
 turkey.1.t:0 "Armed Putsch"
-turkey.1.d:0 "The last disasters suffered by our country have proved that our tyrannical leadership is completely incompetent and unfit to rule. A group of officers with the silent support of the General Staff have launched a putsch aimed at deposing the sultan."
+turkey.1.d:0 "The latest disasters suffered by our country have proved that our tyrannical leadership is completely incompetent and unfit to rule. A group of officers with the silent support of the General Staff have launched a putsch aimed at deposing the sultan."
 turkey.1.a:0 "Putsch overthrows the sultan! A republic is declared!"
 
 turkey.2.t:0 "Future of Turkey"
