A fuck ton of tweaks and fixes

--- a/localisation/KR_Japan_l_english.yml
+++ b/localisation/KR_Japan_l_english.yml
@@ -62,7 +62,9 @@ JAP_LAND_2:0 "Land Reform Finished"
 JAP_colonize_KOREA:0 "Integration of Korea"
 JAP_colonize_TAIWAN:0 "Integration of Taiwan"
 JAP_manpower_bonus:0 "Conscription Bonus"
-JAP_ISO:0 "Fading Sun
+JAP_ISO:0 "Fading Sun"
+JAP_bad_start:0 "Fading Democracy"
+JAP_bad_start_desc:0 "Democracy in Japan sits on a knife edge. The political establishment is young; it has only been 50 years since Meiji Restoration. It may not be able to weather the incoming storm."
 
 ### Tooltips ###
 niigata_focus:0 "The following weeks will determine the course of Japanese history. Choose wisely..."
