--- a/localisation/KR_Illyria_l_english.yml
+++ b/localisation/KR_Illyria_l_english.yml
@@ -14,9 +14,9 @@ ILL_social_liberal_party_long:0 "Demokratska stranka"
 ILL_market_liberal_party:0 "BSS"
 ILL_market_liberal_party_long:0 "Bunjevačko-šokačka stranka"
 ILL_social_conservative_party:0 "IPSS"
-ILL_social_conservative_party_long:0 "Ilirijska pučka seljačka stranka"
+ILL_social_conservative_party_long:0 "Ilirska pučka seljačka stranka"
 ILL_authoritarian_democrat_party:0 "IPS"
-ILL_authoritarian_democrat_party_long:0 "Ilirijska pučka stranka"
+ILL_authoritarian_democrat_party_long:0 "Ilirska pučka stranka"
 ILL_paternal_autocrat_party:0 "SP"
 ILL_paternal_autocrat_party_long:0 "Stranka prava"
 ILL_national_populist_party:0 "Ustaše"
