Adapted chain to help syndicalists in south america with chile, some partition and annexation fixes

--- a/localisation/KR_Annexations_l_english.yml
+++ b/localisation/KR_Annexations_l_english.yml
@@ -468,6 +468,7 @@ annex.123.d:0 "After a long fight with the Breadbasket of Europe, we have launch
 annex.123.a:0 "Occupy them, for now..."
 annex.123.b:0 "Liberate a friendly Ukraine!"
 annex.123.c:0 "Hand it over to our good Russian friends!"
+annex.123.e:0 "Take Crimea and liberate Ukraine!"
 annex.124.t:0 "Fate of the South-Western China"
 annex.124.d:0 "After our successful campaign in the South-Western China we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice...."
 annex.124.a:0 "Continue with military occupation !"
