POL annexation fix

--- a/localisation/KR_Annexations_l_english.yml
+++ b/localisation/KR_Annexations_l_english.yml
@@ -65,6 +65,7 @@ annex.22.d:0 "Our soldiers are marching through the streets of Warsaw after the 
 annex.22.b:0 "These damn poles never give up..."
 annex.22.c:0 "Annex border strip and liberate Poland"
 annex.22.e:0 "Try to win over the Hearts and Minds of the Poles!"
+annex.22.f:0 "Strip Poland of its conquests"
 annex.23.t:0 "Integration of Poland"
 annex.23.d:0 "We've controlled Poland for some time now, and it seems like the local population have finally accepted our rule."
 annex.24.t:0 "Poland Under the German Heel"
