--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -543,8 +543,8 @@ poland.33.d:0 "For over 20 years Poland has not had a King. However, another ele
 poland.33.a:0 "Austria is our friend, Karl Olbracht von Habsburg!"
 poland.33.b:0 "The Saxon, Friedrich Christian Wettin will lead us to glory!"
 poland.33.c:0 "We need a Polish King, viva la Augustyn I Czartoryski!"
-poland.34.t:0 "Choosing the King"
-poland.34.d:0 "For over 20 years Poland has not had a King. However, another election by the Regency Council may finally change that. Each potential King has supporters (and opponents) and will provide differing paths for the development of Poland. Who shall become the new King?"
+poland.34.t:0 "Choosing the King - Austrian Interference"
+poland.34.d:0 "For over 20 years Poland has not had a King. However, another election by the Regency Council may finally change that. Each potential King has supporters (and opponents) and will provide differing paths for the development of Poland. \n\nHowever, Vienna has placed great pressure upon the members of the Council to elect their favourtie candidate, Karl Olbracht von Habsburg. Dare we oppose the Austrian demands?"
 poland.34.a:0 "Austria is our friend, Karl Olbracht von Habsburg!"
 poland.34.b:0 "The Saxon, Friedrich Christian Wettin will lead us to glory!"
 poland.34.c:0 "Mendog III will restore the Commonwealth!"
@@ -1021,8 +1021,6 @@ poland.160.t:0 "Georgia Remains Silent"
 poland.160.d:0 "to-do"
 poland.160.a:0 "We could have used their strength..."
 
-
-
 poland.161.t:0 "Poland Joins the Internationale?"
 poland.161.d:0 "After their recent Syndicalist revolution, the small nation of Poland is seeking to join the ranks of Syndicalism worldwide, the Internationale. Should we allow them into our ranks?"
 poland.161.a:0 "Our brothers!"
@@ -1064,8 +1062,6 @@ poland.171.a:0 "Glorious!"
 poland.172.t:0 "The Cossacks Ride On..."
 poland.172.d:0 "to-do"
 poland.172.a:0 "Truly a tragedy."
-
-
 
 poland.173.t:0 "Poland Invites Us to the Internationale"
 poland.173.d:0 "Poland has moved on to joining the Internationale, leaving us in a precarious position on our own. Should we follow their lead and join the Internationale as well?"
@@ -1214,6 +1210,14 @@ poland.214.a:0 "The Monarchists must be stopped!"
 poland.215.t:0 "20th Anniversary of Polish Independence"
 poland.215.d:0 "There is celebration around the nation today as citizens of the [POL.GetName] celebrate 20 years of independence. The Kingdom of Poland was officially created with the signing of the Act of November 5th, which forged the new Polish state from the ashes of a failing Russia."
 poland.215.a:0 "Here's to twenty more years!"
+poland.216.t:0 "Choosing the King"
+poland.216.d:0 "For over 20 years Poland has not had a King. However, another election by the Regency Council may finally change that. Unfortunately, our status as a client state of Germany has ensured the election is anything but fair. The Regency Council chamber is filled with German "observers", and none have any doubts as to the outcome of this "election"."
+poland.217.t:0 "Choosing the King"
+poland.217.d:0 "For over 20 years Poland has not had a King. However, another election by the Regency Council may finally change that. Unfortunately, our status as a client state of Germany has ensured the election is anything but fair. The Regency Council chamber is filled with German "observers", and none have any doubts as to the outcome of this "election"."
+poland.218.t:0 "Meddling in the Polish Election"
+poland.218.d:0 "The Poles have recently made moves to elect a new king, after 20 years of regency. This election presents the perfect opportunity for us to bring the Polish into our sphere of influence. We could support Karl Albrecht von Habsburg for the new King of Poland, as his election would surely bring Poland closer to us. What should we do?"
+poland.218.a:0 "Pressure the Poles to elect Karl Albrecht von Habsburg."
+poland.218.b:0 "Do not interfere."
 
 ### Global Flags ###
 POL_REPUBLIC:0 "Declared the Polish Republic"
