UoB: Finally an intro event

--- a/localisation/KR_Union_of_Britain_l_english.yml
+++ b/localisation/KR_Union_of_Britain_l_english.yml
@@ -175,6 +175,8 @@ ENG_tuc2_internal_desc:0 "Fighting a war often allows for some more unsavoury el
 ### Events ###
 
 ### 0 - 100: TUC and Show of Force ###
+uob.0.t:0 "The new Britain"
+uob.0.d:0 "After the defeat of France, the United Kingdom's war with Germany dragged on inconclusively for two years. In 1921, the stalemate was finally broken when Lloyd-George agreed to the German proposal of a "Peace with Honour". While Britain's overseas territories remained largely intact, the faith of the people did not. \n\nIn 1925, disaster struck: a minor labour dispute in the coalfields of South Wales quickly escalated, and after six weeks of rioting, looting and pamphleteering, most of the "establishment", including the Royal Family, had fled to Canada. A provisional government of revolutionary groups dissolved what little was left of Parliament, and declared a new "Union of Britain".\n\nFifteen years later, the Trade Union Congress still forms the centerpiece of politics of the federated and democratic Union. The British people are secure on their island, content to build socialism in isolation, protected by the strong Republican Air Force and Navy, and with each county protected by its own popular militia who act both as a reserve military and the new police. \n\nYet, with the world seemingly ready to erupt into chaos, many are starting to wonder if Britain has a duty to spread the revolution to her former colonial territories. After all, the Monarchists in Canada cannot be allowed to plot against the Union indefinitely..."
 uob.1.t:0 "Vote for economic policy"
 uob.1.d:0 "The debate has wandered into the area of economics. As has been predicted, every faction has put forward their own suggestions. Most people assume that the Maximists will win this debate, since Oswald Mosley is a major figure in the British economy these days."
 uob.1.a:0 "Max.: The economy must be expanded, centralised and streamlined"
@@ -1047,4 +1049,4 @@ ENG_authoritarian_democrat_party_long:0 "Authoritarian Democrats"
 ENG_paternal_autocrat_party:0 "Paternal Autocrats"
 ENG_paternal_autocrat_party_long:0 "Paternal Autocrats"
 ENG_national_populist_party:0 "National Populists"
-ENG_national_populist_party_long:0 "National Populists"
+ENG_national_populist_party_long:0 "National Populists""
