very minor fix for a worldnews localisation

--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -22,7 +22,7 @@ worldnews.6.a:0 "An interesting development."
 
 worldnews.7.t:0 "Tsardom Restored"
 worldnews.7.d:0 "The Russian Republic, created in the last years of the Weltkrieg, appears to only have lasted 20 years before it's end. Plagued by disorder, conflict and ineffective governments, the Republic lost the support of the people, and Russian agencies now report that a successor of Nicholas II has been finally coronated as the new Tsar of the nation. \n\nWhile it is not known how different the international stance of this reborn Russian Empire will be, or even if the coronation of the Tsar will have any effect in 'saving the country', numerous monarchies across the world have already congratulated the Romanovs on regaining their divine birth right."
-worldnews.7.a:0 "One more democracy erased forever."
+worldnews.7.a:0 "But I thought they hated them?"
 
 worldnews.8.t:0 "Russia Announces Her Ambitions"
 worldnews.8.d:0 "While many still view Russia as a failed state, torn apart by revolts, disorder and ineffective rule and serving as a buffer for Mitteleuropa, recent events have proven something different. The government of the Russian nation has announced their territorial ambitions, laying claims on almost all the territory of the former Russian Empire. And it appears they are willing to reconquer the lost land if necessary. \n\nNumerous nations in Eastern Europe have already recalled their embassies in Russia, and the world is waiting for Germany's response to this blatant attack on her sphere of influence..."
