Spelling fixes for all

--- a/localisation/KR_Annexations_l_english.yml
+++ b/localisation/KR_Annexations_l_english.yml
@@ -726,11 +726,11 @@ annex.180.a:0 "Continue with military occupation!"
 annex.180.b:0 "Hand these territories to our loyal ally..."
 annex.180.c:0 "The AoG is the perfect fit to manage them!"
 annex.181.t:0 "Fate of Brazil"
-annex.181.d:0 "After the conquest of the vast nation of Brazil we have to organize competent administrations to keep the territory under control. Even if the magnificient city of Rio is under the boots of our soldiers we can't keep an hold on it forever."
+annex.181.d:0 "After the conquest of the vast nation of Brazil we have to organise competent administrations to keep the territory under control. Even if the magnificent city of Rio is under the boots of our soldiers we can't keep an hold on it forever."
 annex.181.a:0 "Liberate a loyal Brazilian government"
 annex.181.b:0 "Break off Piratini and liberate the rest of Brazil"
 annex.182.t:0 "Fate of La Plata"
-annex.182.d:0 "After the conquest of the vast nation of La Plata we have to organize competent administrations to keep the territory under control. A question that we will have to solve is: Should we liberate Paraguay and Uruguay that were conquered by the agressive Argentinians in 1935?"
+annex.182.d:0 "After the conquest of the vast nation of La Plata we have to organise competent administrations to keep the territory under control. A question that we will have to solve is: Should we liberate Paraguay and Uruguay that were conquered by the aggressive Argentinians in 1935?"
 annex.182.a:0 "Liberate La Plata in its entirety"
 annex.182.b:0 "Liberate Paraguay, Uruguay and Argentina"
 
