--- a/localisation/KR_American_Union_State_l_english.yml
+++ b/localisation/KR_American_Union_State_l_english.yml
@@ -121,7 +121,7 @@ TEX_share_the_wealth_desc:0 "Huey Long was bound by the extremists in his allian
 TEX_expand_the_minutemen:0 "Expand the Minutemen"
 TEX_expand_the_minutemen_desc:0 "The treachery of Pelley and the extremists have shown that the Minutemen need to be expanded both in manpower but also in their powers. While some may protest, this is in the best interest of all Americans. The people and Long shall be protected from every barbarous attack that can be launched against them. Some civil liberties will be sacrificed but it is necessary for the safety of all Americans."
 TEX_loyalty_to_long:0 "Loyalty to the Kingfish"
-TEX_loyalty_to_long_desc:0 "Loyalty to Huey Long must be stressed. Huey Long is the protector and savior of America and he will keep the republic safe. We must make sure that no more snakes like Pelley sneak their way into power in America. No traitor shall ever threaten America again while the people are loyal to Huey Long. "
+TEX_loyalty_to_long_desc:0 "Loyalty to Huey Long must be stressed. Huey Long is the protector and saviour of America and he will keep the republic safe. We must make sure that no more snakes like Pelley sneak their way into power in America. No traitor shall ever threaten America again while the people are loyal to Huey Long. "
 TEX_I_am_for_the_poor_man:0 "I am for the Poor man"
 TEX_I_am_for_the_poor_man_desc:0 "I'm for the poor man — all poor men, black and white, they all gotta have a chance. They gotta have a home, a job, and a decent education for their children"
 TEX_perfect_dictatorship:0 "It Can Happen Here!"
