--- a/localisation/KR_Chinese_Republic_l_english.yml
+++ b/localisation/KR_Chinese_Republic_l_english.yml
@@ -158,12 +158,12 @@ CCW_HELP_REP_GER:0 "They help Republican China"
 CCW_HELP_REP_CHI:0 "They help Us"
 CCW_NO_HELP_REP_GER:0 "They don't help Republican China"
 CCW_NO_HELP_REP_CHI:0 "They don't help Us"
-CHI_EXP_GER_FAC:0 "Expropiated German companies"
+CHI_EXP_GER_FAC:0 "Expropriated German companies"
 GER_DEM_FIN_COMP:0 "Germany demanded financial compensation"
 GER_HOLD_TSINGAU:0 "We still hold Tsingau"
 CHI_COMP_GER:0 "China compensate Germany"
 CHI_CONT_WAR:0 "We will continue the War"
-CHI_STRONG_POL:0 "The Qing reforces their police forces"
+CHI_STRONG_POL:0 "The Qing reinforces their police forces"
 CHI_ANN_LEC_80:0 "China annexes the Legation Cities"
 CHI_ANN_LEC_40:0 "China annexes the Legation Cities"
 CHI_NO_ANN_LEC:0 "China doesn't annex the Legation Cities"
