Minor spelling fixes

--- a/localisation/KR_Xibei_San_Ma_l_english.yml
+++ b/localisation/KR_Xibei_San_Ma_l_english.yml
@@ -5,7 +5,7 @@ mongol_attack_to_arms:0 "Xibei San Ma takes the arms"
 mongol_attack_no_need:0 "Xibei San Ma maintains professionalism"
 XSM_Assembly:0 "Xibei San Ma Assembly"
 
-### Parties ###
+#### Parties ###
 #XSM_totalist_party:0 "MCP"
 #XSM_totalist_party_long:0 "Manchu Communist Party"
 #XSM_radical_socialist_party:0 "MRP"
