Removed mentions of Michael Collins in events where he could have fallen beforehand

--- a/localisation/KR_Ireland_l_english.yml
+++ b/localisation/KR_Ireland_l_english.yml
@@ -604,7 +604,7 @@ IRE_QOTD_desc:0 "Despite having gained our freedom from the tyranny of British r
 IRE_UTN:0 "Uniting the Nation"
 IRE_UTN_desc:0 "Some of the chief divisions of our nation could be addressed through a program of cultural reform. Spreading the Irish language will help unite our countrymen, whilst addressing the long-standing hold of the Catholic church over Irish values and morality would be a progressive move. Our youth could see benefit in a scouts scheme, and perhaps our immigrant population can be better integrated with some effort."
 IRE_DWTC:0 "Dealing with the Church"
-IRE_DWTC_desc:0 "The status of the Church has long been in question since the reign of Michael Collins began. Ostensibly, the Republic of Ireland is a secular nation, but some have questioned whether that is true. It's time to officially resolve the question of the Church once and for all in legislation, and with it direct the future of the nation."
+IRE_DWTC_desc:0 "The status of the Church has long been in question since the declaration of Irish independence. Ostensibly, the Republic of Ireland is a secular nation, but some have questioned whether that is true. It's time to officially resolve the question of the Church once and for all in legislation, and with it direct the future of the nation."
 ire.dwtc.tt:0 "\nDecide the §Yreligious direction§! of the Irish nation."
 ire.129.t:0 "The Fate of the Church"
 ire.129.d:0 "Ireland has been a devoutly Catholic nation for over a thousand years, and along with that Catholicism has come conservative ideals and morality. The Irish Republic was founded however on the idea of a secular state, where religion would no longer play a role in politics. The promises of a secular republic have never truly been made good by the government, and the issue of the Church and it's status in the nation has been a divisive factor for some time. The government has now saw fit to address this issue once and for all, and establish the role of the Church in legislation."
@@ -1351,7 +1351,7 @@ ire.47.d:0 "Seemingly in response to the recent violence carried out by the Ulst
 ire.47.a:0 "The cycle of violence continues."
 
 ire.48.t:0 "Craig Speaks Out"
-ire.48.d:0 "After several years of inactivity and silence, the leader of the Ulster Unionist Party has spoken out regarding the status of Ulster in the Republic of Ireland. James Craig, reported by some to have grown senile in his elder years, appeared lively and in a good mood as he viciously attacked the Irish government in his first major address of such a kind since the ceasefire of 1925. He particularly chastised the regime of Michael Collins and the economic neglect paid towards Ulster during the past decade, and demanded that every son and daughter of Ulster be prepared to fight for the prosperity and, if needs be, freedom of the region."
+ire.48.d:0 "After several years of inactivity and silence, the leader of the Ulster Unionist Party has spoken out regarding the status of Ulster in the Republic of Ireland. James Craig, reported by some to have grown senile in his elder years, appeared lively and in a good mood as he viciously attacked the Irish government in his first major address of such a kind since the ceasefire of 1925. He particularly chastised the current regime and the economic neglect paid towards Ulster during the past decade, and demanded that every son and daughter of Ulster be prepared to fight for the prosperity and, if needs be, freedom of the region."
 ire.48.a:0 "He should have kept his mouth shut."
 
 ire.49.t:0 "Belfast City Hall Bombing"
