Kaiser-Wilhelm-Kanal only true canal

--- a/localisation/adjacency_rules_l_english.yml
+++ b/localisation/adjacency_rules_l_english.yml
@@ -14,5 +14,5 @@ SUEZ_CANAL:0 "Suez canal"
 GIBRALTAR_STRAIT:0 "Gibraltar Strait"
 DANISH_BELTS_STRAIT:0 "The Danish Belts"
 PANAMA_CANAL:0 "Panamá Canal"
-KIEL_CANAL:0 "Kiel Canal"
+KAISER_WILHELM_KANAL:0 "Kaiser-Wilhelm-Kanal"
 BOSPHORUS_STRAIT:0 "Bosphorus Strait"
