More focus for the tree

--- a/localisation/KR_Afghanistan_l_english.yml
+++ b/localisation/KR_Afghanistan_l_english.yml
@@ -186,3 +186,28 @@ AFG_train_guard:0 "Extensive Training"
 AFG_more_conscripts:0 "Secret Conscription"
 AFG_prepare_rebellion:0 "Final Preparation"
 AFG_declare_independence:0 "Declare Independence"
+AFG_tribes_start:0 "Dealing with Tribes"
+AFG_religion_authonomy:0 "Give Shia Muslim An Authonomy"
+AFG_religion_supress:0 "Spread The Sunni Faith"
+AFG_sunni_preachers:0 "Religious Education"
+AFG_secular_schools:0 "Secular Education"
+AFG_ubranisation:0 "Forced Urbanisation"
+AFG_improve_villages:0 "Build Up Villages"
+AFG_modern_villages:0 "Modern Countryside"
+AFG_religion:0 "Our Faith"
+AFG_islamism_religion:0 "Glory of Islam"
+AFG_sunni_ties:0 "Close Ties With Our Sunni Brothers"
+AFG_pakistan_manpower:0 "Muslim Refugees From Delhi"
+AFG_sunni_unity:0 "In Allah We Trust"
+AFG_secular_religion:0 "We Are Modern And Secular"
+AFG_dealing_with_radicals:0 "Dealing With Radicals"
+AFG_science:0 "Found Academy Circle"
+AFG_supress_religion_influence:0 "Secularisation"
+AFG_modern_religion:0 "Modern Religion"
+
+### Ideas ###
+AFG_tribes:0 "Tribal Majority"
+AFG_agrarian:0 "Agrarian Economy"
+AFG_traditional_government:0 "Loya Jirga"
+AFG_islamism:0 "Radical Islamism"
+AFG_low_literacy:0 "Low Literacy"
