GER: Some more drafts

--- a/localisation/KR_Germany_l_english.yml
+++ b/localisation/KR_Germany_l_english.yml
@@ -117,7 +117,7 @@ GER_civ_industry_2:0 "ZIP II"
 GER_civ_industry_2_desc:0 "The first phase of the Zivilindustrialisierungsplan has shown promise, but there is more yet to come. At least some of the worst social and economic disaster has been alleviated, though."
 GER_civ_industry_3:0 "ZIP III"
 GER_civ_industry_3_desc:0 "With our civilian industry once again strong, but not yet booming, we are required to take just a few more steps. Soon enough German industry will tower above the rest of the world once more, as the steady influx of resources from the colonies assures a massive production boost."
-GER_industry_finished:0 "Economic boom"
+GER_industry_finished:0 "Economic Boom"
 GER_industry_finished_desc:0 "With our economic policies following the Black Monday a resounding success, private investors have picked up on the lead, and the economy has not only stabilised, but is currently experiencing a boom of sorts. It won't hold forever, but for the minute, we can concentrate on other issues."
 GER_economy:0 "The State of the Economy"
 GER_economy_desc:0 "It's good, really. The industry is humming along, the grain is coming in from the eastern member states of Mitteleuropa, many citizens have work. It's looking up for the Kaiserreich, and it seems like nothing will be able to stop the golden age of the late Reichskanzler Tirpitz..."
@@ -131,8 +131,8 @@ GER_artillery_research:0 "Artillery research"
 GER_artillery_research_desc:0 "An area in which the German army has a long and standing tradition of lagging behind is the area of light support artillery. While the successes in building huge, unwieldy and impractical prestige objects such as the 'Paris Gun' can't be doubted, it's time to invest in some of the more practical - and more efficient - alternatives."
 GER_doctrine_armor:0 "Armoured Breakthrough"
 GER_doctrine_armor_desc:0 "Another crucial point of Guderians and Mansteins new doctrine is the so-called Schwerpunkt. They believe that Panzer technology has advanced to a point where amassed, mobile Panzer forces, with adequately equipped support troops, should be able to lead any offensive to victory. Now they need new Panzers to fit this idea."
-GER_hahn_meitner:0 "Support Hahn & Meitner"
-GER_hahn_meitner_desc:0 "Herr Hahn and Fräulein Meitner are both extremely talented physicists, Hahn discovered nuclear isomerism and Meitner is a department head at the Kaiser Wilhelm Institute! Together we believe the two can help create extremely powerful tools for society. And even more powerful weapons."
+GER_hahn_meitner:0 "Support Einstein & Meitner"
+GER_hahn_meitner_desc:0 "Herr Einstein and Fräulein Meitner are both extremely talented physicists; Einstein is regularly published in science journals even in the Syndicalist bloc, and Meitner is a department head at the Kaiser Wilhelm Institute! Together, we believe, the two can help create extremely powerful tools for society. And even more powerful weapons."
 GER_zuse:0 "Support Konrad Zuse"
 GER_zuse_desc:0 "Konrad Zuse has already handed in several patents for what he calls a 'computing devices'. With proper sponsorship, his mind could be put to good use by the state, for the state."
 GER_kaiser_wilhelm_society:0 "The Kaiser Wilhelm Society"
@@ -195,7 +195,7 @@ GER_post:0 "Unify German post departments"
 GER_post_desc:0 "The independent post departments of the kingdoms of Baden, Württemberg and Bavaria in southern Germany are one of the last remnants of the federal structure of Germany. By finally expanding the responsibilities of the German post department to these countries, we could set an end to all those damaging particularist tendencies. Germany is not something you can opt out of!"
 GER_disband_reichstag:0 "Disband the Reichstag"
 GER_disband_reichstag_desc:0 "Reichskanzler von Schleicher has succeeded. The DVLP is once again the most influential party in Germany and Junkers occupy all important posts. The only thing left to do is to formalise the new regime in the same way as Erich von Ludendorff did it it 1919; Dissolve and suspend the Reichstag for an undetermined amount of time, to bring peace, freedom, justice and security to this new Kaiserreich."
-GER_parlamentsvertrauen:0 "Parlamentsvertrauen"
+GER_parlamentsvertrauen:0 "No more power for the Kaiser"
 GER_parlamentsvertrauen_desc:0 "After more than sixty years of battle against the authoritarian elements of the German establishment, the time has finally come to make Germany a democracy at last. From now on, the Reichskanzler and his government will no longer report to the Kaiser, but to the Reichstag and the people; There will be no more government against, but only of the people, by the people, for the people."
 GER_county_reforms:0 "Democracy in Prussia"
 GER_county_reforms_desc:0 "The current voting system in Prussia is archaic and undemocratic. The people are split into three strata according to their income, with the lowest strata, representing over sixty percent of the population, receiving as many delegates as the upper one, which represents less than ten percent! We should finally implement universal, secret and equal franchise for all citizens of Germany."
@@ -239,7 +239,20 @@ GER_oil_gulf_gamble:0 "The Gamble on the Gulf"
 GER_oil_gulf_safe:0 "Play things safe"
 GER_oil_romania:0 "Remind the Romanians of their duty"
 GER_oil_romania_war:0 "Enforce the oil shipments"
+GER_oil_romania_alliance:0 "Ally with the Monarchists"
 GER_oil_increase:0 "Increase investments"
+GER_darkest_hour:0 "Our Darkest Hour"
+GER_kili:0 "Der Schuss am Kilimandscharo"
+GER_air:0 "Fünf Wochen in der Luft"
+GER_exiled_eco:0 "What little we have left..."
+GER_exiled_infra:0 "...we need to bring together"
+GER_spirit_of_resistance:0 "The Spirit of Resistance"
+GER_afrikakorps:0 "The Afrikakorps"
+GER_the_way_home:0 "Our only way home"
+GER_walking_over_water:0 "Walking over water"
+GER_old_enemies_new_allies:0 "Old enemies, new allies"
+GER_our_continent:0 "Our Dominion"
+GER_crush_france:0 "Crush France"
 
 ### Domestic Events ###
 
@@ -1137,6 +1150,7 @@ GER_dcgb_idea:0 "Deutscher Christlicher Gewerkschaftsbund"
 GER_institut_idea:0 "Institut für Luftfahrttechnik"
 GER_rom_oil_shipments:0 "Oil Shipments from Romania"
 GER_oil_shortage:0 "Oil Shortage"
+GER_cult_of_aviation_idea:0 "Cult of Aviation"
 
 ### Tooltips ###
 GER_mackensen_retires:0 "You can now reform the military command"
